# PPIIPredictor

./: Cargo.toml  H_bond_Acceptor_List  H_bond_Donor_List  Parameters.inp  README  README.md  all_database_131022.txt  click  dataset_result.txt  get_donor_dict.py  get_sec_struct.py  get_struct.py  input_database.txt  output.txt  param.txt  pdb_chains.txt
data_hbond/: 1YWO_Model_0.txt  1cka_Model_0.txt  1gbq_Model_0.txt  1jk8_Model_0.txt  1jmq_Model_0.txt  1l2z_Model_1.txt  1sem_Model_0.txt  1uti_Model_0.txt  2DRM_Model_0.txt  2J6F_Model_0.txt  2LAW_Model_4.txt  2LAZ_Model_17.txt  2LCS_Model_18.txt  2ROL_Model_19.txt  2RPN_Model_4.txt  2V8F_Model_0.txt  2VKN_Model_0.txt  2VWF_Model_0.txt  2df6_Model_0.txt  2ez5_Model_17.txt  2jo9_Model_3.txt  2odd_Model_1.txt  3FMA_Model_0.txt  3I5R_Model_0.txt  3PDO_Model_0.txt  3U23_Model_0.txt  3ULR_Model_0.txt  4B6H_Model_0.txt  4CC2_Model_0.txt  4CW1_Model_0.txt  4F14_Model_0.txt  4HVW_Model_0.txt  4J9C_Model_0.txt  4LNP_Model_0.txt  4U5W_Model_0.txt  4WSF_Model_0.txt  4p57_Model_0.txt  5C0D_Model_0.txt  5J3T_Model_0.txt  hbond_trp_all.txt
database_folder/: pdb2qrt.ent  pdb3c0d.ent
pdb_files/: pdb2rol.ent
src/: lib.rs  main.rs  pdb_parser.rs
