[package]
name = "pp2predictor"
version = "0.1.0"
authors = ["Shashank Pritam<shashankpritam@gmail.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15.6"
glob = "0.3.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
tokio = "1.27.0"
log = "0.4.14"
log4rs = "1.0.0"
anyhow = "1.0"
kiddo = "2.0.1"
typenum = "1.14.0"